--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,14 @@
 cmake_minimum_required(VERSION 3.27)
 project(DSA C)
 
-set(CMAKE_C_STANDARD 90)
+set(CMAKE_C_STANDARD 11)
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
 
 add_executable(DSA
-        main.c)
+        main.c
+        linked_list/node.c
+        utils/errors.c
+        linked_list/list.c
+)
+
+target_sources(DSA PRIVATE linked_list/list.c)
